<resources>
    <string name="app_name">积分</string>
    <string name="unknown">未知</string>
    <string name="sex_male">男</string>
    <string name="sex_girl">女</string>
    <string name="marital_unmarried">未婚</string>
    <string name="marital_married">已婚</string>
    <string name="marital_remarriage">再婚</string>
    <string name="marital_remarried">复婚</string>
    <string name="marital_widowed">丧偶</string>
    <string name="marital_divorce">离异</string>
    <string name="main_bottom_main">首页</string>
    <string name="main_bottom_booking">预订</string>
    <string name="main_bottom_add">添加</string>
    <string name="main_bottom_mine">我的</string>
    <string name="add_hint_name">请输入姓名</string>
    <string name="add_hint_phone">请输入电话号码</string>
    <string name="add_hint_age">请输入年龄</string>
    <string name="add_hint_birthday">请点击选择生日</string>
    <string name="add_hint_message">请输入描述个人信息</string>
    <string name="add_sex_header">性别:</string>
    <string name="add_age_header">年龄:</string>
    <string name="add_birthday_header">生日:</string>
    <string name="add_marital_header">婚姻:</string>
    <string name="add_children_header">子女:</string>
    <string name="add_button_clear">清空</string>
    <string name="add_button_save">保存</string>
    <string-array name="sex_array">
        <item>@string/unknown</item>
        <item>@string/sex_male</item>
        <item>@string/sex_girl</item>
    </string-array>
    <string-array name="marita_array">
        <item>@string/unknown</item>
        <item>@string/marital_unmarried</item>
        <item>@string/marital_married</item>
        <item>@string/marital_remarriage</item>
        <item>@string/marital_remarried</item>
        <item>@string/marital_widowed</item>
        <item>@string/marital_divorce</item>
    </string-array>
    <string name="select_image_label">选择头像</string>
    <string name="select_image_take_photo">拍照</string>
    <string name="select_image_select_image">选照片</string>
    <string name="select_image_select_failed">选择图片失败</string>
    <string name="main_integral_total">总积分:</string>
    <string name="page_title_member">个人详情</string>
    <string name="member_age">年龄:%1$d</string>
    <string name="member_sex">性别:%1$s</string>
    <string name="member_integral">总积分:%1$d</string>
    <string name="member_marital">婚姻:%1$s</string>
    <string name="member_children">子女:%1$d男%2$d女</string>
    <string name="member_message">个人描述信息:</string>
    <string name="member_list_integral">积分列表</string>
    <string name="member_list_address">地址列表</string>
    <string name="member_list_coupons">优惠券列表</string>
    <string name="member_list_booking">预订列表</string>
    <string name="member_integral_total">总积分:%1$s\t\t%2$s</string>
    <string name="member_integral_used"><Data><![CDATA[已使用:<s>%1$s</s>\t\t%2$s]]></Data></string>
    <string name="member_integral_desc">%1$s\t%2$s</string>
    <string name="member_address_name_phone">%1$s\t\t%2$s\t\t%3$s</string>
    <string name="member_address_info">%1$s%2$s%3$s%4$s&#160;&#160;%5$s</string>
    <string name="member_address_export">导出</string>
    <string name="member_address_export_over">地址信息已经复制到粘贴板</string>
    <string name="member_more">更多</string>
    <string name="member_update_message">修改客户信息</string>
    <string name="member_delete">确定删除\"%1$s\"信息吗？</string>
    <string name="mine_integral">积分项</string>
    <string name="mine_coupons">优惠券配置</string>
    <string name="mine_coupons_near_overdue">临期优惠券</string>
    <string name="mine_booking">预订项</string>
    <string name="mine_address">导出地址</string>
    <string name="mine_feedback">问题反馈</string>
    <string name="mine_show_member_avatar">显示成员头像</string>
    <string name="mine_app_version">版本</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_message">这个人很懒，什么也没留下</string>
    <string name="mine_login">微信登录</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="error_message_logout">您尚未登录，请先登录</string>
    <string name="integral_element_label">积分项</string>
    <string name="booking_element_label">预订项</string>
    <string name="element_item_score">分数：%1$s</string>
    <string name="element_item_amount">面值：%1$s</string>
    <string name="element_item_title">标题：%1$s</string>
    <string name="element_item_message">描述：%1$s</string>
    <string name="element_item_number">数值：%1$s</string>
    <string name="element_item_type">类型：%1$s</string>
    <string name="element_item_date">最后使用日期：%1$s</string>
    <string name="add">添加</string>
    <string name="use">使用</string>
    <string name="element_add_integral_label">添加积分项</string>
    <string name="element_add_coupons_label">添加优惠券</string>
    <string name="element_add_booking_label">添加预订项</string>
    <string name="element_add_coupons_expiry_label">添加有效期</string>
    <string name="element_add_score">请输入分数,最多支持两位小数点</string>
    <string name="element_add_amount">请输入面值,最多支持两位小数点</string>
    <string name="element_add_number">请输入数值,不支持小数点</string>
    <string name="element_add_title">请输入标题</string>
    <string name="element_add_message">请输入描述</string>
    <string name="element_add_check_coefficient">自动勾选系数</string>
    <string-array name="coupons_expiry_array">
        <item>@string/coupons_expiry_day</item>
        <item>@string/coupons_expiry_week</item>
        <item>@string/coupons_expiry_month</item>
        <item>@string/coupons_expiry_year</item>
        <item>@string/coupons_expiry_forever</item>
    </string-array>
    <string name="retry">请重试</string>
    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="add_integral_label">赠送积分</string>
    <string name="add_address_label">新建收件人</string>
    <string name="add_integral_spinner_second">积分:%1$s\t\t%2$s</string>
    <string name="add_integral_empty_element">您还没有积分项\n请到\"首页\-我的\-积分项\"中添加</string>
    <string name="input_coefficient">请输入系数</string>
    <string name="has_coefficient">带系数</string>
    <string name="integral_list_label">积分列表</string>
    <string name="address_list_label">收件人列表</string>
    <string name="address_label">新建收货地址</string>
    <string name="address_consignee">收件人</string>
    <string name="address_consignee_hint">请输入收件人的姓名</string>
    <string name="address_phone">手机号码</string>
    <string name="address_phone_hint">请输入收件人的手机号码</string>
    <string name="address_area">所在地区</string>
    <string name="address_area_hint">省、市、县、区、街道等</string>
    <string name="address_detailed">详细地址</string>
    <string name="address_detailed_hint">小区、楼牌号、单元、门牌号等</string>
    <string name="address_tag">地址标签</string>
    <string name="address_desc">地址描述</string>
    <string name="address_desc_hint">地址描述信息-选填</string>
    <string name="address_tags_default">家庭,单位,学校</string>
    <string name="address_tag_add_hint">请输入标签名，最多5个字</string>
    <string name="integral_use_label">使用积分</string>
    <string name="integral_use_usable">可用积分</string>
    <string name="integral_use_want">欲用积分</string>
    <string name="integral_use_want_hint">请输入欲用积分数字</string>
    <string name="integral_element_delete">确定删除\"%1$s\"积分项吗？</string>
    <string name="error_uninput">您尚未输入</string>
    <string name="error_invalid_number">您未输入有效数字</string>
    <string name="error_integral_insufficient">积分余额不足以消费</string>
    <string name="error_password_empty">密码为空!</string>
    <string name="error_network">网络异常，请检查网络后重试</string>
    <string name="error_account_lockout">账户被锁定，请联系客服</string>
    <string name="error_unknown">登录错误，请重试!</string>
    <string name="wechat_uninstall">您未安装微信</string>
    <string name="auth_waiting">休息一会,%1$d秒后再次尝试</string>
    <string name="user_auth_canceled">用户取消授权</string>
    <string name="user_auth_deny">用户授权被拒</string>
    <string name="user_auth_failed">用户授权失败，请重试</string>
    <string name="user_auth_successful">用户授权成功</string>
    <string name="user_finish">完成</string>
    <string name="user_logining">正在登录，请稍候\.\.\.</string>
    <string name="disclaimer_title">免责声明</string>
    <string name="disclaimer_content">条款1：该APP供使用者提供合法消费等记录，不得从事违法行为。\n\n条款2：该APP为本地版，所录入数据不上传至服务器，使用者不要随便清理数据，由于使用者清理数据导致数据丢失，APP研发者不予赔付损失!</string>
    <string name="disclaimer_agreed_content">同意上述条款</string>
    <string name="disclaimer_agreed">同意</string>
    <string name="disclaimer_unAgreed">不同意</string>
    <string name="disclaimer_unCheck_remind">请阅读并同意上述条款</string>
    <string name="coupons_label">优惠券</string>
    <string name="coupons_unused">未使用(%1$d)</string>
    <string name="coupons_used">使用记录(%1$d)</string>
    <string name="coupons_overdue">已过期(%1$d)</string>
    <string name="coupons_use">立即使用</string>
    <string name="coupons_expiry_day">天</string>
    <string name="coupons_expiry_week">周</string>
    <string name="coupons_expiry_month">月</string>
    <string name="coupons_expiry_year">年</string>
    <string name="coupons_expiry_forever">长期</string>
    <string name="coupons_member">%1$s ></string>
    <string name="coupons_element_delete">确定删除\"%1$s\"优惠券项吗？</string>
    <string name="coupons_expiry_element_delete">确定删除\"%1$d%2$s\"有效期项吗？</string>
    <string name="error_params_data">数据有误请退出重新进入</string>
    <string name="error_no_data">还没有相关数据</string>
    <string name="error_nofound_member">未找到成员</string>
    <string name="error_nofound_coupons">未找到优惠券</string>
    <string name="error_unavailable_coupons">无效优惠券</string>
    <string name="error_use_coupons">使用优惠券错误</string>
    <string name="error_number_empty">数值不能为空</string>
    <string name="error_number_positive">数值必须为正整数</string>
    <string name="error_has_expiry">有效期已存在</string>
    <string name="error_booking_empty">订单信息为空</string>
    <string name="coupons_near_overdue_label">临期优惠券</string>
    <string name="coupons_config_label">优惠券配置</string>
    <string name="coupons_config_items">优惠券</string>
    <string name="coupons_config_expiry">有效期</string>
    <string name="coupons_grant_label">赠送优惠券</string>
    <string name="coupons_grant_donee">赠予</string>
    <string name="coupons_grant_coupons">优惠券</string>
    <string name="coupons_grant_expiry">有效期</string>
    <string name="coupons_grant_message">使用描述</string>
    <string name="coupons_grant_tag">标签</string>
    <string name="coupons_grant_message_hint">使用描述信息-选填(不填写将使用优惠券描述)</string>
    <string name="coupons_grant_coupons_spinner_second">面值:%1$s\t\t%2$s</string>
    <string name="coupons_grant_empty_element">您还没有%1$s\n请到\"首页\-我的\-优惠券配置\"中添加</string>
    <string name="error_coupons_unselect">请选择优惠券</string>
    <string name="error_expiry_unselect">请选择有效期</string>
    <string name="booking_order_label">预订下单提醒</string>
    <string name="booking">预订</string>
    <string name="booking_element_delete">确定删除\"%1$s\"预订项吗？\n将同时删除预订信息</string>
    <string name="number">x %d</string>
    <string name="booking_order_bookers">预订者</string>
    <string name="booking_order_time">预订时间</string>
    <string name="booking_order_address">预订地址</string>
    <string name="booking_invalid_label">作废预订下单提醒</string>
    <string name="booking_invalid_bookers">预订者</string>
    <string name="booking_invalid_time">预订时间</string>
    <string name="booking_invalid_address">预订地址</string>
    <string name="booking_element_created">预订：%1$s</string>
    <string name="booking_element_ordered">下单：%1$s</string>
    <string name="booking_element_invalid">作废：%1$s</string>
    <string name="booking_label">预订下单</string>
    <string name="booking_member">预订者</string>
    <string name="booking_address">地址</string>
    <string name="booking_commodity">预订商品</string>
    <string name="booking_message">备注信息</string>
    <string name="booking_message_hint">下单备注信息-选填(不填写将使用预订项描述)</string>
    <string name="booking_input_count_hint">请输入订购件数</string>
    <string name="coupons_use_label">优惠券使用提醒</string>
    <string name="coupons_use_owner">拥有者</string>
    <string name="coupons_use_amount">优惠金额</string>
    <string name="description">描述信息</string>
    <string name="immediate_invalid">立即作废</string>
</resources>