<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_disclaimer">

    <TextView
        android:id="@+id/disclaimerTitle"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/disclaimer_title"
        android:textSize="@dimen/widget_fontSize_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/disclaimerTitle" />

    <Button
        android:id="@+id/disclaimerUnAgreed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"
        android:background="@drawable/background_button_red"
        android:text="@string/disclaimer_unAgreed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/disclaimerAgreed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/disclaimerAgreed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/disclaimerAgreed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"
        android:background="@drawable/background_button_blue"
        android:text="@string/disclaimer_agreed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/disclaimerUnAgreed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/disclaimerUnAgreed" />

    <CheckBox
        android:id="@+id/disclaimerCheckBox"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="@dimen/margin_8"
        android:checked="false"
        app:layout_constraintBottom_toTopOf="@id/disclaimerUnAgreed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/disclaimerCheckBoxContent"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/disclaimer_agreed_content"
        app:layout_constraintBottom_toBottomOf="@id/disclaimerCheckBox"
        app:layout_constraintLeft_toRightOf="@id/disclaimerCheckBox"
        app:layout_constraintTop_toTopOf="@id/disclaimerCheckBox" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/disclaimer_content"
        android:textSize="@dimen/widget_fontSize_15"
        app:layout_constraintBottom_toTopOf="@id/disclaimerCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disclaimerTitle" />
</android.support.constraint.ConstraintLayout>