<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="47dip"
    android:background="@drawable/background_mine_item"
    android:paddingTop="@dimen/padding_4">

    <View
        android:id="@+id/mineItemDivision"
        android:layout_width="0dp"
        android:layout_height="1dip"
        android:layout_marginTop="@dimen/padding_4"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/mineItemSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:checked="true"
        android:switchTextAppearance="@style/SwitchTheme"
        android:textColor="@android:color/white"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:thumb="@drawable/switch_thumb_selector"
        android:track="@drawable/switch_track_selector"
        app:layout_constraintBottom_toTopOf="@id/mineItemDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:showText="true"
        app:switchTextAppearance="@style/SwitchTheme"
        app:track="@drawable/switch_track_selector" />

    <TextView
        android:id="@+id/mineItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/mine_integral"
        android:textColor="@color/black"
        android:textSize="@dimen/widget_fontSize_15"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>