<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/mainBottomBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/background_bar"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/mainBottomBarMain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/icon_main_bottombar_main"
            android:gravity="center"
            android:text="@string/main_bottom_main"
            android:textColor="@drawable/textcolor_main_bottombar" />

        <RadioButton
            android:id="@+id/mainBottomBarAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/icon_main_bottombar_add"
            android:gravity="center"
            android:text="@string/main_bottom_add"
            android:textColor="@drawable/textcolor_main_bottombar" />

        <RadioButton
            android:id="@+id/mainBottomBarMine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/icon_main_bottombar_mine"
            android:gravity="center"
            android:text="@string/main_bottom_mine"
            android:textColor="@drawable/textcolor_main_bottombar" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/mainContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/mainBottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>